check lettori-scrittori

--- a/lettori-scrittori_su_piu_oggetti_monitor/.test/procedure.yml
+++ b/lettori-scrittori_su_piu_oggetti_monitor/.test/procedure.yml
@@ -60,6 +60,9 @@ rules:
           int leggi_stazione(...){
             ...
           }
+          void scrivi_stazione(...){
+            ...
+          }
       - pattern-not: |
           int leggi_stazione(...){
             ...
@@ -71,7 +74,7 @@ rules:
             ...
           }
       - pattern-not: |
-          int scrivi_stazione(...){
+          void scrivi_stazione(...){
             ...
             pthread_cond_broadcast(...);
             ...
