check prod-cons priorità

--- a/produttore-consumatore_con_priorita/.test/prodcons.yml
+++ b/produttore-consumatore_con_priorita/.test/prodcons.yml
@@ -59,35 +59,49 @@ rules:
     severity: ERROR
 
   - id: wake-producers-inorder-up
-    pattern-either:
-      - patterns:
-          - pattern: |
-              ...
-              void consuma(...){
-              ...
-              }
-          - pattern-not-inside: |
-              ...
-              if($TH1 > 0){
-                ...
-              } else {
-                ...
-              }
-              ...
-      - patterns:
-          - pattern: |
-              ...
-              void consuma(...){
-              ...
-              }
-          - pattern-not-inside: |
-              ...
-              if($TH1 > 0){
-                ...
-              } else if($TH2 > 0){
-                ...
-              }
-              ...
+    patterns:
+      - pattern: |
+         void consuma(...){
+           ...
+         }
+      - pattern-not-inside: |
+         ...
+         if($TH1 > 0){
+           ...
+           pthread_cond_signal(...);
+           ...
+         } else {
+           ...
+           pthread_cond_signal(...);
+           ...
+         }
+         ...
+      - pattern-not-inside: |
+         ...
+         if($TH1 > 0){
+           ...
+           pthread_cond_signal(...);
+           ...
+         } else if($TH2 > 0){
+           ...
+           pthread_cond_signal(...);
+           ...
+         }
+         ...
+      - pattern-not-inside: |
+         ...
+         if($TH1 > 0)
+           pthread_cond_signal(...);
+         else if($TH2 > 0)
+           pthread_cond_signal(...);
+         ...
+      - pattern-not-inside: |
+         ...
+         if($TH1 > 0)
+           pthread_cond_signal(...);
+         else
+           pthread_cond_signal(...);
+         ...
 
     message: È necessario controllare che il consumatore verifichi la presenza di produttori ad alta priorità in attesa e risvegliare loro.
              Altrimenti, il consumatore risveglia un produttore a bassa priorità.
